--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
   url_launcher: ^6.3.1
+  barcode_widget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
